--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@lhci/cli": "0.11.0",
     "@lhci/server": "0.11.0",
-    "mysql2": "^2.1.0",
-    "pg": "^8.2.1",
-    "pg-hstore": "^2.3.3",
-    "sqlite3": "^5.0.0"
+    "mysql2": "^2.3.3",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "sqlite3": "^5.1.6"
   },
   "scripts": {
-    "start": "lhci server --config=/data/lighthouserc.json"
+    "start": "lhci server --config=${CONFIG_PATH:-./lighthouserc.json}"
   }
 }
